# websocket

./: .gitignore  CMakeLists.txt  client.html  test_ffmpeg_ws.py  test_fps.py  test_rtsp.py  test_rtsp_vlc.py
.trae/: settings.json
ffmpeg/: CMakeLists.txt  client.html  main.cpp  websocket_server.cpp  websocket_server.h
rtsp/: CMakeLists.txt  camera_source.cpp  camera_source.h  main.cpp  rtsp_server.cpp  rtsp_server.h  test_jpeg.cpp  video_source.cpp  video_source.h
sdl-rect/: CMakeLists.txt  client.html  main.cpp  websocket_server.cpp  websocket_server.h
sdl-video/: CMakeLists.txt  client.html  main.cpp  websocket_server.cpp  websocket_server.h
src/: main.cpp  websocket_server.cpp
src/utils/: base64.h
utils/: base64.c  base64.h  sha1.h
